--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "simplytype",
   "version": "1.0.0",
   "description": "A simple typing test.",
+  "type": "module",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/reybalolot/symplytype#readme",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.19.2"
   }
 }
